html and js finished

--- a/index.html
+++ b/index.html
@@ -5,36 +5,78 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | FAQ Accordion Card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
-<body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
-
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
-
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
-
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
+<body class="split">
+  <div class="box-img">
+    <img src="/images/illustration-box-desktop.svg" alt="">
+  </div>
+  <div class="container split">
+    <div class="img-container">
+      <img src="/images/illustration-woman-online-mobile.svg" class="woman-img-mobile">
+      <img src="/images/bg-pattern-mobile.svg" class="bg-img-mobile">
+      <img src="/images/illustration-woman-online-desktop.svg" alt="" class="woman-img-desktop">
+      <img src="/images/bg-pattern-desktop.svg" alt="" class="bg-img-desktop">
+    </div>
+    <div class="info split">
+      <div class="title">
+        <h1>FAQ</h1>
+      </div>
+      <div class="questions">
+        <div class="question-container 1">
+          <div id="1" class="question-title split">
+            <h2 class="question">How many team members can I invite?</h2>
+            <div class="arrow-container">
+              <img src="/images/icon-arrow-down.svg" alt="see-answer">
+            </div>
+          </div>
+          <p id="1" class="answer hidden">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
+        </div>
+        <div class="question-container 2">
+          <div id="2" class="question-title split">
+            <h2 class="question">What is the maximum file upload size?</h2>
+            <div class="arrow-container">
+              <img src="/images/icon-arrow-down.svg" alt="see-answer">
+            </div>
+          </div>
+          <p id="2" class="answer hidden">No more than 2GB. All files in your account must fit your allotted storage space.</p>
+        </div>
+        <div class="question-container 3">
+          <div id="3" class="question-title split">
+            <h2 class="question">How do I reset my password?</h2>
+            <div class="arrow-container">
+              <img src="/images/icon-arrow-down.svg" alt="see-answer">
+            </div>
+          </div>
+          <p id="3" class="answer hidden">Click “Forgot password” from the login page or “Change password” from your profile page. <br>
+          A reset link will be emailed to you.</p>
+        </div>
+        <div class="question-container 4">
+          <div id="4" class="question-title split">
+            <h2 class="question">Can I cancel my subscription?</h2>
+            <div class="arrow-container">
+              <img src="/images/icon-arrow-down.svg" alt="see-answer">
+            </div>
+          </div>
+          <p id="4" class="answer hidden">Yes! Send us a message and we’ll process your request no questions asked.</p>
+        </div>
+        <div class="question-container 5">
+          <div id="5" class="question-title split">
+            <h2 class="question">Do you provide additional support?</h2>
+            <div class="arrow-container">
+              <img src="/images/icon-arrow-down.svg" alt="see-answer">
+            </div>
+        </div>
+          <p id="5" class="answer hidden">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+        </div>  
+      </div>
+    </div>
+  </div>  
+  <!--<div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div>-->
+  <script src="app.js"></script>
 </body>
 </html>
