update html and corrected errors
I updated the id's so now they are unique to each element

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </div>
     <div class="container split">
       <div class="img-container">
-        <img src="/images/illustration-woman-online-mobile.svg" class="woman-img-mobile">
-        <img src="/images/bg-pattern-mobile.svg" class="bg-img-mobile">
+        <img src="/images/illustration-woman-online-mobile.svg" class="woman-img-mobile" alt="">
+        <img src="/images/bg-pattern-mobile.svg" class="bg-img-mobile" alt="">
         <img src="/images/illustration-woman-online-desktop.svg" alt="" class="woman-img-desktop">
         <img src="/images/bg-pattern-desktop.svg" alt="" class="bg-img-desktop">
       </div>
@@ -26,50 +26,50 @@
         </div>
         <div class="questions">
           <div class="question-container 1">
-            <div id="1" class="question-title split" tabindex="1">
+            <div id="question-1" class="question-title split" tabindex="1">
               <h2 class="question">How many team members can I invite?</h2>
               <div class="arrow-container">
                 <img src="/images/icon-arrow-down.svg" alt="see-answer">
               </div>
             </div>
-            <p id="1" class="answer hidden">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
+            <p id="answer-1" class="answer hidden">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
           </div>
           <div class="question-container 2">
-            <div id="2" class="question-title split" tabindex="2">
-              <h2 class="question">What is the maximum file upload size?</h2>
+            <div id="question-2" class="question-title split" tabindex="2">
+              <h2 class="question selected">What is the maximum file upload size?</h2>
               <div class="arrow-container">
-                <img src="/images/icon-arrow-down.svg" alt="see-answer">
+                <img src="/images/icon-arrow-down.svg" alt="see-answer" class="selected">
               </div>
             </div>
-            <p id="2" class="answer hidden">No more than 2GB. All files in your account must fit your allotted storage space.</p>
+            <p id="answer-2" class="answer hidden active">No more than 2GB. All files in your account must fit your allotted storage space.</p>
           </div>
           <div class="question-container 3">
-            <div id="3" class="question-title split" tabindex="3">
+            <div id="question-3" class="question-title split" tabindex="3">
               <h2 class="question">How do I reset my password?</h2>
               <div class="arrow-container">
                 <img src="/images/icon-arrow-down.svg" alt="see-answer">
               </div>
             </div>
-            <p id="3" class="answer hidden">Click “Forgot password” from the login page or “Change password” from your profile page. <br>
+            <p id="answer-3" class="answer hidden">Click “Forgot password” from the login page or “Change password” from your profile page. <br>
             A reset link will be emailed to you.</p>
           </div>
           <div class="question-container 4">
-            <div id="4" class="question-title split" tabindex="4">
+            <div id="question-4" class="question-title split" tabindex="4">
               <h2 class="question">Can I cancel my subscription?</h2>
               <div class="arrow-container">
                 <img src="/images/icon-arrow-down.svg" alt="see-answer">
               </div>
             </div>
-            <p id="4" class="answer hidden">Yes! Send us a message and we’ll process your request no questions asked.</p>
+            <p id="answer-4" class="answer hidden">Yes! Send us a message and we’ll process your request no questions asked.</p>
           </div>
           <div class="question-container 5">
-            <div id="5" class="question-title split" tabindex="5">
+            <div id="question-5" class="question-title split" tabindex="5">
               <h2 class="question">Do you provide additional support?</h2>
               <div class="arrow-container">
                 <img src="/images/icon-arrow-down.svg" alt="see-answer">
               </div>
           </div>
-            <p id="5" class="answer hidden">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+            <p id="answer-5" class="answer hidden">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
           </div>
         </div>
       </div>
